--- a/Tours/src/app/navbar/navbar.component.html
+++ b/Tours/src/app/navbar/navbar.component.html
@@ -6,6 +6,9 @@
         <a routerLink="/">Home</a>
       </li>
       <li class="navbar-item">
+        <a routerLink="/">Services</a>
+      </li>
+      <li class="navbar-item">
         <a routerLink="/tours">Tours</a>
       </li>
       <li class="navbar-item">
