--- a/Tours/src/app/landing/landing.component.html
+++ b/Tours/src/app/landing/landing.component.html
@@ -10,6 +10,9 @@
         </div>
       </div>
     </div>
+    
   </section>
+  <div></div>
+  <app-offers></app-offers>
   <app-footer></app-footer>
   
