--- a/Tours/src/app/login/login.component.html
+++ b/Tours/src/app/login/login.component.html
@@ -1,13 +1,27 @@
 <div class="container mx-auto mt-8 flex justify-center items-center">
-    <form [formGroup]="loginForm" (ngSubmit)="getUser()" class="bg-white p-8 rounded shadow-md max-w-md">
+  <form
+    [formGroup]="loginForm"
+    (ngSubmit)="getUser()"
+    class="bg-white p-8 rounded shadow-md max-w-md"
+  >
     <h2 class="text-2xl font-semibold mb-4">User Login</h2>
-    
+
     <label for="email" class="block mb-2">Email:</label>
-    <input type="email" id="email" name="email" formControlName="email" class="w-full px-4 py-2 border rounded mb-4">
-    
+    <input
+      type="email"
+      id="email"
+      name="email"
+      formControlName="email"
+      class="w-full px-4 py-2 border rounded mb-4"
+    />
+
     <label for="password" class="block mb-2">Password:</label>
-    <input type="password" formControlName="password" class="w-full px-4 py-2 border rounded mb-4">
-   
-    <button type="submit">Register</button>
-    </form>
-    </div>
+    <input
+      type="password"
+      formControlName="password"
+      class="w-full px-4 py-2 border rounded mb-4"
+    />
+
+    <button type="submit">Login</button>
+  </form>
+</div>
